edit ch 7 tab data

--- a/ch07.ipynb
+++ b/ch07.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "anonymous-champagne",
+   "id": "major-walnut",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "directed-shame",
+   "id": "musical-leather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-fundamentals",
+   "id": "invalid-partner",
    "metadata": {},
    "source": [
     "## Use the Pandas library to do statistics on tabular data.\n",
@@ -32,13 +32,13 @@
     "    - Load it with import pandas as pd. The alias pd is commonly used for Pandas. \n",
     "- Read a Comma Separated Values (CSV) data file with pd.read_csv. \n",
     "- Argument is the name of the file to be read. \n",
-    "Assign result to a variable to store the data that was read."
+    "- Assign result to a variable to store the data that was read. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "italic-friendly",
+   "execution_count": 7,
+   "id": "virtual-tamil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "deadly-yacht",
+   "execution_count": 8,
+   "id": "czech-tobago",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-telephone",
+   "id": "endangered-cotton",
    "metadata": {},
    "source": [
     "## Use index_col to specify that a column’s values should be used as row headings.\n",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "alien-internet",
+   "id": "caring-employee",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suited-volleyball",
+   "id": "sitting-burner",
    "metadata": {},
    "outputs": [],
    "source": []
